--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "swiper": "^11.0.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-responsive-masonry": "^2.1.3",
+    "autoprefixer": "^10.4.20",
     "file-loader": "^6.2.0",
+    "postcss": "^8.5.3",
     "sass": "^1.71.1",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5"
   }
 }
