--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "react-bootstrap": "^2.10.1",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.16.0",
     "react-modal-video": "^2.0.1",
     "react-responsive-masonry": "^2.2.0",
-    "swiper": "^11.0.6"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.9",
@@ -29,6 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-responsive-masonry": "^2.1.3",
+    "@types/react-slick": "^0.23.13",
     "file-loader": "^6.2.0",
     "sass": "^1.71.1",
     "typescript": "^5"
