--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.1",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-modal-video": "^2.0.1",
     "react-responsive-masonry": "^2.2.0",
