--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
