--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "sharp": "^0.34.3",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
