--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "nodemailer": "^7.0.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
