--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.542.0",
     "next": "14.0.4",
     "next-intl": "^4.3.4",
     "nodemailer": "^7.0.5",
